2010-10-02  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: complete url and complete argument.

	* Add: Show CopyFrom path in log-sibling-mode.

	* Add: fsvn-log-list-propview-this bound to `z p'

	* Add: fsvn-log-sibling-propview-this bound to `z p'

	* Fix: completing-read-url

	* Change: fsvn-open-log-view-mode -> fsvn-open-logview-mode

2010-09-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Multiple Emacs process cleanup using files in temp directory.

2010-09-18  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.6

	* Add: fsvn-browse-create-patch-path bound to `= P'
	       fsvn-browse-create-patch-selected bound to `= p'

2010-09-15  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fancy modeline (from psvn.el)

2010-08-31  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-open-repository

2010-08-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: completing read command argument quoted string.

	* Add: easymenu (proplist, propedit)

	* Add: fsvn-log-list-revert-to-revision key is bound to `C-c C-t'

	* Add: fsvn-log-list-create-patch-generic key is bound to `= p'

	* Change: fsvn-browse-cmd-read-create-patch-path -> fsvn-cmd-read-patch-file

2010-08-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.5

2010-08-21  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Some of NTEmacs compatibility with Meadow.

2010-08-18  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Use `quit' signal.

2010-08-16  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Simplify NTEmacs install process.

2010-08-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: obsolete fsvn-set-prop-value -> fsvn-set-propset
	          obsolete fsvn-set-prop-delete -> fsvn-set-propdel
	          fsvn-get-propget change arg order

	* Fix: fsvn-svk some refactor

2010-08-05  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
